<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/article_filter">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginDate"
        android:id="@+id/tvBeginDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etBeginDate"
        android:inputType="date"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="false"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortOrder"
        android:id="@+id/tvSortOrder"
        android:layout_below="@+id/etBeginDate"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSortOrder"
        android:entries="@array/sort_order_arrays"
        android:layout_alignTop="@+id/tvSortOrder"
        android:layout_toRightOf="@+id/tvNDValues"
        android:layout_toEndOf="@+id/tvNDValues" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsDeskValues"
        android:id="@+id/tvNDValues"
        android:layout_below="@+id/spSortOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/radio_ND_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvNDValues"
        android:layout_toRightOf="@+id/tvNDValues"
        android:layout_toEndOf="@+id/tvNDValues" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nd_arts"
            android:id="@+id/rbArts"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nd_fs"
            android:id="@+id/rbFnS" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nd_sports"
            android:id="@+id/rbSports"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/radio_ND_group"
        android:layout_centerHorizontal="true" />
</RelativeLayout>